# ffx-lookup-tool

./: .gitignore  pyproject.toml  readme.md  requirements.txt
ffx_lookup_tool/data/: armour_abilities.json  buyable_items.json
ffx_lookup_tool/src/: data.py  helptext.json  main.py
ffx_lookup_tool/src/search/: ability_search.py  item_search.py  location_search.py  monster_search.py  other_searches.py
ffx_lookup_tool/src/utilities/: format_item_data.py  format_monster_data.py  misc.py  ronso_calc.py  select.py  short_mon_table.py
ffx_lookup_tool/src/utilities/key_search_table/: filter_monsters.py  key_search_table.py  replace_list_items.py  sort_monsters.py
ffx_search_tool/data/: aeon_abilities.json  armour_abilities.json  celestials.json  items.json  monster_arena.json  monsters.json  pain.json  primers.json  remiem_temple.json  rewards.json  weapon_abilities.json
ffx_search_tool/src/: CLI_utility.py  constants.py  data.py  main.py  parser.py  ronso_calc.py  table_data.py  utilities.py
ffx_search_tool/src/search/: ability_search.py  item_search.py  location_search.py  monster_search.py  other_searches.py
ffx_search_tool/src/search_algos/: monster_search.py
ffx_search_tool/src/utilities/: constants.py  filter_monsters.py  format_item_data.py  format_monster_data.py  key_search_table.py  misc.py  ronso_calc.py  select.py  short_mon_table.py  sort_monsters.py  table_data.py  tables.py
ffx_search_tool/src/utilities/key_search_table/: key_search_table.py  replace_list_items.py  sort_monsters.py
