[tool.poetry]
name = "ffx_search_tool"
version = "0.1.0"
description = "will add later"
authors = ["Andreas Schauer"]
license = "will add later"
readme = "README.md"

[tool.poetry.scripts]
ffx = "ffx_search_tool.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.5"}

[tool.poetry.urls]
"Repository" = "https://github.com/andreasSchauer/ffx-search-tool"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


