[tool.poetry]
name = "ffx_lookup_tool"
version = "1.0.0"
description = "A command-line tool for Final Fantasy X that can lookup monsters, items, abilities and more."
authors = ["Andreas Schauer"]
license = "Apache-2.0"
readme = "README.md"
include = ["ffx_lookup_tool/data/**"]

[tool.poetry.scripts]
ffx = "ffx_lookup_tool.src.main:app"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.12.5"

[tool.poetry.urls]
"Repository" = "https://github.com/andreasSchauer/ffx-lookup-tool"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"