[tool.poetry]
name = "ffx_lookup_tool"
version = "1.0.1"
description = "A command-line tool for Final Fantasy X that can lookup monsters, items, abilities and more."
authors = ["Andreas Schauer"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "ffx_lookup_tool" }
]

[tool.poetry.scripts]
ffx = "ffx_lookup_tool.src.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.12.5"

[tool.poetry.urls]
"Repository" = "https://github.com/andreasSchauer/ffx-lookup-tool"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"